maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	setDirection(dir);
        ^Escaper:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if(!estFaceMur){
        ^